...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F0F0F0"
        app:title="Listado de Coleccionistas"
        app:titleTextAppearance="@color/cardview_dark_background"
        app:titleTextColor="@android:color/darker_gray" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Buscar Coleccionista" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collector_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>

