<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/album_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/collector_image"
            android:layout_width="56dp"
            android:layout_height="65dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/collector_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Coleccionista"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/collector_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email de coleccionista"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/collector_telephone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telefono de coleccionista"
                android:textAppearance="?attr/textAppearanceBody2" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>