<resources>
    <string name="app_name">Vinilos</string>
    <string name="default_text">Haga clic en el botón para cargar información</string>
    <string name="post_text">Haga clic en el botón para crear un dato</string>
    <string name="fetch_label">Obtener coleccionistas</string>
    <string name="post_label">Crear coleccionista</string>
    <string name="id_hint">ID</string>
    <string name="name_hint">John Doe</string>
    <string name="phone_hint">3112223344</string>
    <string name="mail_hint">example@domain.com</string>
    <string name="search_album">Buscar Album</string>
</resources>